# mmCoreAndDevices

DeviceAdapters/: Makefile.am  configure.ac
DeviceAdapters/PriorPureFocus/: Makefile.am  PureFocus.h
MMCore/: meson.build
MMCore/subprojects/: MMDevice
MMDevice/: meson.build
