AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_PriorPureFocus.la
libmmgr_dal_PriorPureFocus_la_SOURCES = \
	PureFocusModule.cpp \
	PureFocusHub.cpp \
	PureFocusAutoFocus.cpp \
	PureFocusOffset.cpp \
	PureFocus.h
libmmgr_dal_PriorPureFocus_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_PriorPureFocus_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)

EXTRA_DIST = PriorPureFocus.vcxproj PriorPureFocus.vcxproj.filters
